--- a/pages/hammer_intro_teach_c1.html
+++ b/pages/hammer_intro_teach_c1.html
@@ -110,7 +110,7 @@
 					<div id="limit_area">
 				<!-- InstanceBeginEditable name="正文" -->
 					<h1>第一章：软件的下载与设置</h1>
-					<p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;首先，你需要下载VHE工具（参考资料的网盘有），下载好了工具后，我们需要一系列的设置。</p>
+					<p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;首先，你需要下载VHE工具（参考资料的网盘有，也可以<a href="http://ys-e.ys168.com/393065927/SLuVfSs4K4K713686MLJ/CS%E5%9C%B0%E5%9B%BE%E5%88%B6%E4%BD%9C%E5%B7%A5%E5%85%B7%E5%8C%85.zip">点这里直接下载</a>），下载好了工具后，我们需要一系列的设置。</p>
 					<p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;打开VHE，点击“工具”里的“参数设置”，可以看到有许多选项卡，其中一些是必须设置的。</p>
 					<div class="img_center"><img src="../images/teach/1-1.png"></div>
 					<p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;打开<b>“纹理”</b>选项卡，增加自己做地图需要用到的纹理包，halflife.wad纹理包是CS最主要的官方纹理包，许多常用纹理都在这个纹理里面。halflife.wad在cs1.6\valve文件夹里。（关于什么是纹理包，可在本站“名词表”中找到，其他特殊名词同理，之后不再赘述）</p>
